<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/change"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/welcome"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="24dp" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:hint="New user name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:hint="Current password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:hint="New password" />

    <Button
        android:id="@+id/butty"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="save changes"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/myButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:text="@string/go_to_order"
        android:onClick="newButton"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
</ScrollView>