<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmRiceActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/confirm"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/main"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:hint="all"/>

        <TextView
            android:id="@+id/pro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/top"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/extract"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="17sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/Insert_Price"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/rice"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp" />


            <TextView
                android:id="@+id/protein"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/rice" />

            <TextView
                android:id="@+id/TopPrice"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/protein" />

        </RelativeLayout>


        <TextView
            android:id="@+id/total"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp" />


        <Button
            android:id="@+id/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/order"
            android:textColor="@color/tan_background" />


    </LinearLayout>
</ScrollView>

